fix documentation header z-index

--- a/src/app/components/component-documentation/ComponentDocumentation.scss
+++ b/src/app/components/component-documentation/ComponentDocumentation.scss
@@ -18,7 +18,7 @@ $height-component-header-mobile: 85px;
 
   &__header {
     position: fixed;
-    z-index: $z-index-overlay-under-top-nav;
+    z-index: $z-index-overlay-over-top-nav;
     @include padding(1, true);
     padding-bottom: 0 !important;
     top: $top-nav-height-desktop;
